span alignment fixed

--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ span{
     text-decoration: none;
     float:left;
    border: 1px solid white;
-    margin-left: 1rem;
+    margin-left: 8%;
     margin-top:1rem;
 }
 
@@ -106,6 +106,7 @@ span{
     margin-top:2%;
     margin-left:5%;
     padding-left: 1rem;
+    justify-content: flex-start;
 }
 
 .top-left p {
@@ -114,7 +115,7 @@ span{
 
 
 
-#right-image {
+img{
     margin-top:2%;
     margin-left:8%;
    width:50%;
